# Deployeee

./: README.md  deployeee.py  deployeee.toml  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: build.yml
Deployeee/: CI.py  Config.py  Deploy.py  Deployeee.py  FishShell.py.old  GitHub.py  Setup.py  __init__.py
Deployeee/tests/: test.py
gh_templates/: deploy.yml.j2  destroy.yml.j2
